<resources>
    <string name="app_name">Uber Hits</string>
    <string name="title_activity_consult_restaurant">ConsultRestaurant</string>
    <string name="playground">Playground</string>
    <string name="composant">Composant</string>

    <!-- SLIDESHOW -->
    <string name="slideshow_button">Slideshow</string>
    <string name="slideshow_left_button">&lt;</string>
    <string name="slideshow_right_button">&gt;</string>

    <!-- RESTAURANT -->
    <string name="reservation_nbGuests">Nombre de convives</string>
    <string name="reservation_date">Date de la réservation</string>

    <!-- PICTURE -->
    <string name="picture_save_button">Valider</string>

    <!-- TAB MAIN -->
    <string name="tab_list">Liste</string>
    <string name="tab_map">Carte</string>

    <!-- TAB RESTAURANT -->
    <string name="tab_menu">Menu</string>
    <string name="tab_feedback">Avis</string>
    <string name="tab_reservation">Réservation</string>

    <!-- FRAGMENT RESERVATION -->
    <string name="reservation_book">Réserver</string>
    <string name="reservation_book_pop_up">Votre réservation au restaurant \"%1$s\" le %2$s pour %3$s personne(s) est enregistrée !</string>

    <!-- FRAGMENT FEEDBACK -->
    <string name="feedback_comment">Commentaire</string>
    <string name="feedback_pictures">Photo(s)</string>
    <string name="feedback_save">Enregistrer</string>
    <string name="feedback_take_picture">Prendre une photo</string>
    <string name="feedback_saved_pop_up">Votre avis sur le restaurant \"%1$s\" est enregistré !</string>
    <string name="feedback_get_picture">Get picture</string>
    <string name="feedback_map">GMap</string>


    <!-- TAB CUSTOM PICTURE -->
    <string name="tab_filter">Filtres</string>
    <string name="tab_sticker">Stickers</string>

    <!-- FRAGMENT FILTER -->
    <string name="filter_no_filter">Sans filtre</string>
    <string name="filter_1">Luminosité</string>
    <string name="filter_2">Secoue !</string>
    <string name="pictures">Pictures</string>

</resources>